layout issue fixed and versioned up

--- a/css/browser_action.css
+++ b/css/browser_action.css
@@ -13,7 +13,7 @@
 body {
   background: url('../images/background.png');
   font-family: 'font';
-  width:350px;
+  width:342px;
   height:240px;
 }
 
